--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-streamlit
+streamlit==1.40.0
+pandas==2.2.3
+plotly==5.24.1
+numpy==2.0.2
+pydeseq2==0.4.10
+scikit-learn==1.5.2
+imblearn==0.0
+matplotlib==3.9.2
+imbalanced-learn==0.12.3
+scipy==1.14.1
+statsmodels==0.14.4
+pip==24.3.1
+openpyxl==3.1.5
